fix: update spacing for dashboard widget

--- a/frappe/public/scss/desktop.scss
+++ b/frappe/public/scss/desktop.scss
@@ -217,12 +217,13 @@ html, body {
 	// Overrides for each widgets
 	&.dashboard-widget-box {
 		min-height: 240px;
-		padding: var(--padding-sm) var(--padding-md);
+		padding: var(--padding-md) var(--padding-lg);
+
+		.widget-head {
+			padding: var(--padding-xs)
+		}
 
 		.chart-container {
-			margin-right: -10px;
-			margin-left: -10px;
-
 			.frappe-chart {
 				max-width: 100%;
 				line.line-horizontal {
